# gitmem

./: CMakeLists.txt  README.md  test_gitmem.py
examples/: join_blocked_thread.gm  join_nop.gm  join_race.gm  join_spawn.gm  local.gm  lock.gm  race_condition.gm  spawn.gm  spawn_read_global.gm  test.gm  weird_dep.gm
examples/failing/: bad_join.gm  bad_lhs.gm  no_semicolon.gm  unassigned_reg.gm
examples/failing/semantics/: conditional_race.gm  deadlock.gm  error_and_race.gm  failed_assertion.gm  failed_assertion_many_schedules.gm  failed_assertion_neq.gm  join_blocked_thread.gm  join_datarace.gm  join_deadlock.gm  join_nonexisting.gm  test.gm  unlock.gm  unlock_another_threads_lock.gm
examples/failing/syntax/: bad_add.gm  bad_add2.gm  bad_assert.gm  bad_condition.gm  bad_lock.gm  bad_rhs.gm  empty_assert.gm  empty_brace.gm  if_no_brace.gm  if_no_cond.gm  spurious_else.gm
examples/oracle/: beans.gm  counters.gm  locking_tracks_scoped_updates.gm  nondeterministic_race.gm  nondeterministic_schedule_no_race.gm  singleton.gm  unsynchronised_racy_assignment.gm
examples/passing/semantics/: addition.gm  conditional_non_race.gm  globals.gm  if.gm  join_fastforward.gm  join_nop.gm  join_pulled_variable.gm  join_spawn.gm  lock.gm  lock_as_sync.gm  spawn.gm  spawn_read_global.gm
gitmem-extension/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
gitmem-extension/syntaxes/: grammar.tmLanguage.json
src/: debugger.cc  gitmem.cc  gitmem_trieste.cc  graph.cc  graph.hh  graphviz.cc  graphviz.hh  internal.hh  interpreter.cc  interpreter.hh  lang.hh  main.cc  mermaid.cc  mermaid.hh  model_checker.cc  parser.cc  reader.cc
src/passes/: branching.cc  check_refs.cc  expressions.cc  statements.cc
